--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
+# Build files
+/dist
 
-# production
-/build
+# Environment file
+.env
 
-# misc
+# Files generated during development
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.log
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Editor-specific files
+.idea
+.vscode
+
